--- a/app/index.html
+++ b/app/index.html
@@ -20,5 +20,16 @@
     <section class="controls">
       <button class="controls--clear-storage">Clear Storage</button>
     </section>
+
+    <template id="link-template">
+      <article class="link">
+        <h3 class="link--title"></h3>
+        <p><a href="#" class="link--url"></a></p>
+      </article>
+    </template>
+
+    <script>
+      require('./renderer.js');
+    </script>
   </body>
 </html>
